--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "hast-util-to-string": "^2.0.0",
     "hastscript": "^7.2.0",
     "mdast-util-to-string": "^3.1.1",
-    "next-mdx-remote": "^4.3.0",
+    "next-mdx-remote": ">=4.x",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-prism-plus": "^1.5.0",
     "rehype-slug": "^5.1.0",
@@ -76,6 +76,8 @@
     "@types/jest": "^29.4.0",
     "@types/mdast": "^3.0.10",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/unist": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -85,6 +87,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.1",
     "prettier": "^2.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
@@ -92,8 +96,8 @@
     "vfile": "^5.3.6"
   },
   "peerDependencies": {
+    "next-mdx-remote": ">=4.x",
     "react": ">=16.x <=18.x",
-    "react-dom": ">=16.x <=18.x",
-    "next-mdx-remote": ">=4.x"
+    "react-dom": ">=16.x <=18.x"
   }
 }
