--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@ipikuka/next-mdx-remote",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0-alpha.1",
   "description": "It is an opinionated wrapper for the serialize function of the `next-mdx-remote` package that written by hashicorp",
   "type": "module",
   "module": "./dist/esm/index.js",
+  "types": "./dist/esm",
   "scripts": {
     "build": "tsc",
     "lint": "eslint \"{**/*,*}.{js,ts}\"",
