--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "@ipikuka/next-mdx-remote",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0-alpha.6",
   "description": "It is an opinionated wrapper for the serialize function of the `next-mdx-remote` package that written by hashicorp",
   "type": "module",
   "exports": {
     ".": {
-      "types": [
-        "./dist/esm",
-        "././dist/esm/lib",
-        "./global.d.ts"
-      ],
+      "types": "./dist/esm/index.d.ts",
       "import": "./dist/esm/index.js"
     }
   },
