--- a/package.json
+++ b/package.json
@@ -51,18 +51,15 @@
     "access": "public"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.2.2",
     "github-slugger": "^2.0.0",
-    "gray-matter": "^4.0.3",
     "hast-util-has-property": "^2.0.1",
-    "hast-util-to-string": "^2.0.0",
     "hastscript": "^7.2.0",
     "mdast-util-to-string": "^3.1.1",
     "next-mdx-remote": ">=4.x",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
-    "remark": "^14.0.2",
-    "remark-breaks": "^3.0.2",
     "remark-definition-list": "^1.2.0",
     "remark-emoji": "^3.1.0",
     "remark-fix-guillemets": "^1.1.2",
@@ -95,6 +92,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
+    "mdast": "^3.0.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
