--- a/package.json
+++ b/package.json
@@ -46,59 +46,61 @@
     "access": "public"
   },
   "dependencies": {
-    "@mdx-js/react": "^2.3.0",
     "github-slugger": "^2.0.0",
     "hast-util-has-property": "^3.0.0",
-    "hastscript": "^8.0.0",
+    "hastscript": "^9.0.0",
     "mdast-util-to-string": "^4.0.0",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-prism-plus": "^1.6.3",
+    "rehype-pre-language": "^1.0.1",
+    "rehype-prism-plus": "^2.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-emoji": "^4.0.1",
     "remark-fix-guillemets": "^1.1.2",
     "remark-flexible-code-titles": "^1.1.4",
-    "remark-flexible-containers": "^1.0.7",
-    "remark-flexible-markers": "^1.0.4",
+    "remark-flexible-containers": "^1.2.1",
+    "remark-flexible-markers": "^1.2.1",
     "remark-flexible-paragraphs": "^1.0.4",
+    "remark-flexible-toc": "^1.0.0",
     "remark-gemoji": "^8.0.0",
     "remark-gfm": "^4.0.0",
     "remark-ins": "^1.0.2",
-    "remark-smartypants": "^2.0.0",
+    "remark-smartypants": "^2.1.0",
     "remark-supersub": "^1.0.0",
-    "remark-textr": "^6.0.0",
+    "remark-textr": "^6.1.0",
     "unist-builder": "^4.0.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@mdx-js/react": "^3.0.1",
     "@types/dedent": "^0.7.2",
-    "@types/hast": "^3.0.3",
-    "@types/jest": "^29.5.11",
+    "@types/hast": "^3.0.4",
+    "@types/jest": "^29.5.12",
     "@types/mdast": "^4.0.3",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
+    "@types/node": "^20.11.28",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@types/unist": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "dedent": "^0.7.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "mdast": "^3.0.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.2",
     "unified": "^11.0.4",
     "vfile": "^6.0.1"
   },
   "peerDependencies": {
-    "next-mdx-remote": "^4.4.1",
+    "next-mdx-remote": "^0.0.0-canary-20240314011020",
     "react": ">=18",
     "react-dom": ">=18"
   }
