--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "jsx": "react",
     "strict": true,
     "declaration": true,
