--- a/package.json
+++ b/package.json
@@ -46,26 +46,25 @@
     "access": "public"
   },
   "dependencies": {
-    "github-slugger": "^2.0.0",
-    "hast-util-has-property": "^3.0.0",
+    "@mdx-js/mdx": "^3.0.1",
     "hastscript": "^9.0.0",
-    "mdast-util-to-string": "^4.0.0",
+    "mdast-util-to-hast": "^13.1.0",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-pre-language": "^1.0.1",
+    "rehype-pre-language": "^1.1.0",
     "rehype-prism-plus": "^2.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-emoji": "^4.0.1",
     "remark-fix-guillemets": "^1.1.2",
-    "remark-flexible-code-titles": "^1.1.4",
+    "remark-flexible-code-titles": "^1.2.0",
     "remark-flexible-containers": "^1.2.1",
     "remark-flexible-markers": "^1.2.1",
-    "remark-flexible-paragraphs": "^1.0.4",
-    "remark-flexible-toc": "^1.0.0",
+    "remark-flexible-paragraphs": "^1.2.0",
+    "remark-flexible-toc": "^1.1.0",
     "remark-gemoji": "^8.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-ins": "^1.0.2",
+    "remark-ins": "^1.1.0",
     "remark-smartypants": "^2.1.0",
     "remark-supersub": "^1.0.0",
     "remark-textr": "^6.1.0",
@@ -74,28 +73,27 @@
   },
   "devDependencies": {
     "@mdx-js/react": "^3.0.1",
-    "@types/dedent": "^0.7.2",
     "@types/hast": "^3.0.4",
     "@types/jest": "^29.5.12",
     "@types/mdast": "^4.0.3",
-    "@types/node": "^20.11.28",
-    "@types/react": "^18.2.66",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.22",
     "@types/unist": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "dedent": "^0.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "dedent": "^1.5.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "mdast": "^3.0.0",
     "prettier": "^3.2.5",
+    "prettier-2": "npm:prettier@^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.2",
+    "typescript": "^5.4.3",
     "unified": "^11.0.4",
     "vfile": "^6.0.1"
   },
