--- a/package.json
+++ b/package.json
@@ -46,43 +46,18 @@
     "access": "public"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^3.0.1",
-    "hastscript": "^9.0.0",
-    "mdast-util-to-hast": "^13.1.0",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-pre-language": "^1.1.0",
-    "rehype-prism-plus": "^2.0.0",
-    "rehype-raw": "^7.0.0",
-    "rehype-slug": "^6.0.0",
-    "remark-definition-list": "^2.0.0",
-    "remark-emoji": "^4.0.1",
-    "remark-fix-guillemets": "^1.1.2",
-    "remark-flexible-code-titles": "^1.2.0",
-    "remark-flexible-containers": "^1.2.1",
-    "remark-flexible-markers": "^1.2.1",
-    "remark-flexible-paragraphs": "^1.2.0",
-    "remark-flexible-toc": "^1.1.0",
-    "remark-gemoji": "^8.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-ins": "^1.1.0",
-    "remark-smartypants": "^2.1.0",
-    "remark-supersub": "^1.0.0",
-    "remark-textr": "^6.1.0",
-    "unist-builder": "^4.0.0",
-    "unist-util-visit": "^5.0.0"
+    "next-mdx-remote": "^0.0.0-canary-20240314011020"
   },
   "devDependencies": {
+    "@mdx-js/mdx": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@types/hast": "^3.0.4",
     "@types/jest": "^29.5.12",
-    "@types/mdast": "^4.0.3",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.70",
-    "@types/react-dom": "^18.2.22",
-    "@types/unist": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "dedent": "^1.5.1",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "dedent": "^1.5.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -93,13 +68,12 @@
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "unified": "^11.0.4",
     "vfile": "^6.0.1"
   },
   "peerDependencies": {
-    "next-mdx-remote": "^0.0.0-canary-20240314011020",
-    "react": ">=18",
-    "react-dom": ">=18"
+    "react": ">=16.x <=18.x",
+    "react-dom": ">=16.x <=18.x"
   }
 }
