--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ipikuka/next-mdx-remote.git"
+    "url": "git+https://github.com/ipikuka/mdx.git"
   },
   "keywords": [
     "mdx",
@@ -52,9 +52,9 @@
   ],
   "author": "ipikuka <talatkuyuk@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/ipikuka/next-mdx-remote#readme",
+  "homepage": "https://github.com/ipikuka/mdx#readme",
   "bugs": {
-    "url": "https://github.com/ipikuka/next-mdx-remote/issues"
+    "url": "https://github.com/ipikuka/mdx/issues"
   },
   "publishConfig": {
     "access": "public"
