--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@ipikuka/plugins": "^1.0.2",
-    "next-mdx-remote-client": "^1.0.6"
+    "@ipikuka/plugins": "^1.0.2"
   },
   "devDependencies": {
     "@mdx-js/mdx": "^3.1.0",
@@ -96,8 +95,9 @@
     "vfile": "^6.0.3"
   },
   "peerDependencies": {
-    "react": ">= 18.3.0 < 19.0.0",
-    "react-dom": ">= 18.3.0 < 19.0.0"
+    "next-mdx-remote-client": ">=1 | >=2",
+    "react": ">=18 | >=19",
+    "react-dom": ">=18 | >=19"
   },
   "engines": {
     "node": ">=18.18.0"
