--- a/package.json
+++ b/package.json
@@ -95,9 +95,9 @@
     "vfile": "^6.0.3"
   },
   "peerDependencies": {
-    "next-mdx-remote-client": ">=1 | >=2",
-    "react": ">=18 | >=19",
-    "react-dom": ">=18 | >=19"
+    "next-mdx-remote-client": "^1.0.0 || ^2.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "engines": {
     "node": ">=18.18.0"
